# Agentic_AI

./: README.md  pyproject.toml  requirements.txt
MCP_Server/: MathServer.py  Weather.py  client.py  mcp_client_summary.md
notebooks/: 0-langchain.ipynb  1-langchain_intro.ipynb  10-ReAct_Archi_and_Memory.ipynb  11-HumanInTheLoop.ipynb  2-langchain_tools.ipynb  3-Multi_tool_ReAct.ipynb  4-messages.ipynb  5-StructuredOutput.ipynb  6-Short_term_memory.ipynb  7-Middleware.ipynb  8-basic_chatbot.ipynb  9-langraph_with_tools.ipynb
